# kb-cloud-client-python

./: .coveragerc  .editorconfig  .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  generate.sh  index.html  kb_cloud_client.html  pyproject.toml  ruff.toml  setup.cfg
.generator/: pyproject.toml
.generator/schemas/: adminapi.yaml  openapi.yaml
.generator/src/generator/: __init__.py  cli.py  formatter.py  openapi.py  utils.py
.generator/src/generator/templates/: api.j2  api_init.j2  model.j2  model_enum.j2  model_init.j2  model_list.j2  model_normal.j2  model_oneof.j2  module_init.j2  partial_header.j2
.github/workflows/: ci.yaml  docs.yaml  publish.yaml
examples/admin/: get_current_user.py  list_clusters.py  list_engines.py  list_environments.py  list_organizations.py  manage_organization.py
examples/user/: create_cluster.py  list_clusters.py  list_organizations.py
kb_cloud_client/: kbcloud.html
kb_cloud_client/kbcloud/: admin.html  api.html  model.html
kb_cloud_client/kbcloud/admin/: api.html  model.html
src/kb_cloud_client/: __init__.py  _version.py  api_client.py  configuration.py  exceptions.py
src/kb_cloud_client/kbcloud/: __init__.py
src/kb_cloud_client/kbcloud/admin/: __init__.py
src/kb_cloud_client/kbcloud/api/: __init__.py  account_api.py  ai_api.py  alert_api.py  alert_config_api.py  alert_inhibit_api.py  alert_metrics_api.py  alert_object_api.py  alert_receiver_api.py  alert_rule_api.py  alert_strategy_api.py  autohealing_api.py  backup_api.py  backup_method_api.py  backup_repo_api.py  benchmark_api.py  billing_api.py  class_api.py  class_types_api.py  cluster_alert_switch_api.py  cluster_api.py  cluster_log_api.py  cluster_tag_api.py  cluster_task_api.py  dameng_api.py  data_replication_api.py  database_api.py  disaster_recovery_api.py  dms_api.py  engine_api.py  engine_option_api.py  environment_api.py  event_api.py  feature_api.py  import_api.py  ip_whitelist_api.py  kafka_api.py  key_api.py  license_api.py  llm_api.py  (+28 more)
src/kb_cloud_client/kbcloud/model/: __init__.py  access_level.py  account.py  account_list.py  account_list_item.py  account_list_role_type.py  account_option.py  account_role_type.py  acl_user.py  acl_user_response.py  ai_conversation.py  ai_conversation_list_response.py  ai_conversation_request.py  ai_message.py  ai_message_list_response.py  alert_cluster.py  alert_config.py  alert_inhibit.py  alert_inhibit_list.py  alert_metric.py  alert_metric_list.py  alert_object.py  alert_object_list.py  alert_receiver.py  alert_receiver_category.py  alert_receiver_list.py  (+493 more)
tests/: test_api_client.py  test_configuration.py  test_exceptions.py  test_models.py
(+692 files in other folders)
