[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ── pytest / coverage (tests live at repo root) ──────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["kb_cloud_client"]
omit = [
    "*/kbcloud/api/*",    # generated
    "*/kbcloud/model/*",  # generated
    "*/kbcloud/admin/*",  # generated
]

[tool.coverage.report]
show_missing = true
skip_covered = false
