[metadata]
name = kb-cloud-client
version = attr: kb_cloud_client._version.__version__
description = Python client for the KubeBlocks Cloud API
long_description = file: README.md
long_description_content_type = text/markdown
author = ApeCloud
author_email = support@apecloud.com
license = Apache-2.0
url = https://github.com/apecloud/kb-cloud-client-python
project_urls =
    Bug Tracker = https://github.com/apecloud/kb-cloud-client-python/issues
    Changelog = https://github.com/apecloud/kb-cloud-client-python/blob/main/CHANGELOG.md
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    requests>=2.28.0
    python-dateutil>=2.8.2
    urllib3>=1.26.0

[options.packages.find]
where = src

[options.package_data]
kb_cloud_client =
    py.typed

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    ruff>=0.4.0
    build>=1.0.0
    twine>=5.0.0
    pdoc>=14.0.0
