[tool.poetry]
name = "generator"
version = "0.1.0"
description = "KubeBlocks Cloud Python client generator"
authors = ["ApeCloud <support@apecloud.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.4"
PyYAML = "^6.0"
jsonref = "^1.1.0"
jinja2 = "^3.1.2"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
black = ">=23.0.0"
mypy = ">=1.0.0"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
